--- a/Interfaces/cs.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/cs.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Příště nezobrazovat";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Nevysypávat";
+/* Class = "NSWindow"; title = "Vysypat koš"; ObjectID = "5"; */
+"5.title" = "Vysypat koš";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Vysypat koš";
+/* Class = "NSButtonCell"; title = "Vysypat koš"; ObjectID = "17"; */
+"17.title" = "Vysypat koš";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "V koši jsou smazané příspěvky. Chcete před ukončením programu vysypat koš?";
+/* Class = "NSButtonCell"; title = "Nevysypávat"; ObjectID = "18"; */
+"18.title" = "Nevysypávat";
 
+/* Class = "NSTextFieldCell"; title = "V koši jsou smazané příspěvky. Chcete před ukončením programu vysypat koš?"; ObjectID = "19"; */
+"19.title" = "V koši jsou smazané příspěvky. Chcete před ukončením programu vysypat koš?";
+
+/* Class = "NSButtonCell"; title = "Příště nezobrazovat"; ObjectID = "20"; */
+"20.title" = "Příště nezobrazovat";
