--- a/Interfaces/de.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/de.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Diese Warnung bitte nicht mehr anzeigen";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Leere den Papierkorb NICHT";
+/* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
+"5.title" = "Empty Trash";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Leere den Papierkorb";
+/* Class = "NSButtonCell"; title = "Papierkorb leeren"; ObjectID = "17"; */
+"17.title" = "Papierkorb leeren";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Es gibt noch gelöschte Artikel im Papierkorb.\nMöchten Sie den Papierkorb vor Beenden leeren?";
+/* Class = "NSButtonCell"; title = "Papierkorb NICHT leeren"; ObjectID = "18"; */
+"18.title" = "Papierkorb NICHT leeren";
 
+/* Class = "NSTextFieldCell"; title = "Es gibt noch gelöschte Artikel im Papierkorb.\nMöchten Sie den Papierkorb vor Beenden leeren?"; ObjectID = "19"; */
+"19.title" = "Es gibt noch gelöschte Artikel im Papierkorb. Möchten Sie den Papierkorb vor Beenden leeren?";
+
+/* Class = "NSButtonCell"; title = "Diese Warnung nicht mehr anzeigen"; ObjectID = "20"; */
+"20.title" = "Diese Warnung nicht mehr anzeigen";
