--- a/Interfaces/es.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/es.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "No volver a mostrar este mensaje";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "No vaciar papelera";
+/* Class = "NSWindow"; title = "Vaciar papelera"; ObjectID = "5"; */
+"5.title" = "Vaciar papelera";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Vaciar papelera";
+/* Class = "NSButtonCell"; title = "Vaciar papelera"; ObjectID = "17"; */
+"17.title" = "Vaciar papelera";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Hay artículos eliminados en la papelera.\n¿Desea vaciar la papelera antes de salir?";
+/* Class = "NSButtonCell"; title = "No vaciar papelera"; ObjectID = "18"; */
+"18.title" = "No vaciar papelera";
 
+/* Class = "NSTextFieldCell"; title = "Hay artículos eliminados en la papelera.\n¿Desea vaciar la papelera antes de salir?"; ObjectID = "19"; */
+"19.title" = "Hay artículos eliminados en la papelera. ¿Desea vaciar la papelera antes de salir?";
+
+/* Class = "NSButtonCell"; title = "No volver a mostrar este mensaje"; ObjectID = "20"; */
+"20.title" = "No volver a mostrar este mensaje";
