--- a/Interfaces/eu.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/eu.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Ez erakutsi ohar hau berriro";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Ez hustu zakarrontzia";
+/* Class = "NSWindow"; title = "Zakarrontzia Hustu"; ObjectID = "5"; */
+"5.title" = "Zakarrontzia Hustu";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Zakarrontzia Hustu";
+/* Class = "NSButtonCell"; title = "Zakarrontzia Hustu"; ObjectID = "17"; */
+"17.title" = "Zakarrontzia Hustu";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Ezabatutako artikuluak zakarrontzian daude.\nIrten aurretik zakarrontzia hustu nahi al duzu?";
+/* Class = "NSButtonCell"; title = "Ez hustu zakarrontzia"; ObjectID = "18"; */
+"18.title" = "Ez hustu zakarrontzia";
 
+/* Class = "NSTextFieldCell"; title = "Ezabatutako artikuluak zakarrontzian daude.\nIrten aurretik zakarrontzia hustu nahi al duzu?"; ObjectID = "19"; */
+"19.title" = "Ezabatutako artikuluak zakarrontzian daude. Irten aurretik zakarrontzia hustu nahi al duzu?";
+
+/* Class = "NSButtonCell"; title = "Ez erakutsi ohar hau berriro"; ObjectID = "20"; */
+"20.title" = "Ez erakutsi ohar hau berriro";
