--- a/Interfaces/fr.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/fr.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Ne plus afficher cette alerte";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Ne pas vider la corbeille";
+/* Class = "NSWindow"; title = "Vider la corbeille"; ObjectID = "5"; */
+"5.title" = "Vider la corbeille";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Vider la corbeille";
+/* Class = "NSButtonCell"; title = "Vider la corbeille"; ObjectID = "17"; */
+"17.title" = "Vider la corbeille";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "La corbeille contient des articles supprimés.\nSouhaitez-vous la vider avant de quitter ?";
+/* Class = "NSButtonCell"; title = "Ne pas vider la corbeille"; ObjectID = "18"; */
+"18.title" = "Ne pas vider la corbeille";
 
+/* Class = "NSTextFieldCell"; title = "La corbeille contient des articles supprimés.\nSouhaitez-vous la vider avant de quitter ?"; ObjectID = "19"; */
+"19.title" = "La corbeille contient des articles supprimés. Souhaitez-vous la vider avant de quitter ?";
+
+/* Class = "NSButtonCell"; title = "Ne plus afficher cette alerte"; ObjectID = "20"; */
+"20.title" = "Ne plus afficher cette alerte";
