--- a/Interfaces/it.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/it.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Non mostrare di nuovo questo avviso";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Non Svuotare il Cestino";
+/* Class = "NSWindow"; title = "Svuota Cestino"; ObjectID = "5"; */
+"5.title" = "Svuota Cestino";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Svuota Cestino";
+/* Class = "NSButtonCell"; title = "Svuota Cestino"; ObjectID = "17"; */
+"17.title" = "Svuota Cestino";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Ci sono degli articoli eliminati nel cestino.\nDesideri svuotare il cestino prima di uscire?";
+/* Class = "NSButtonCell"; title = "Non Svuotare il Cestino"; ObjectID = "18"; */
+"18.title" = "Non Svuotare il Cestino";
 
+/* Class = "NSTextFieldCell"; title = "Ci sono degli articoli eliminati nel cestino.\nDesideri svuotare il cestino prima di uscire?"; ObjectID = "19"; */
+"19.title" = "Ci sono degli articoli eliminati nel cestino. Desideri svuotare il cestino prima di uscire?";
+
+/* Class = "NSButtonCell"; title = "Non mostrare di nuovo questo avviso"; ObjectID = "20"; */
+"20.title" = "Non mostrare di nuovo questo avviso";
