--- a/Interfaces/ja.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/ja.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Do not show this warning again";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Don't Empty Trash";
+/* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
+"5.title" = "Empty Trash";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Empty Trash";
+/* Class = "NSButtonCell"; title = "Empty Trash"; ObjectID = "17"; */
+"17.title" = "Empty Trash";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "There are deleted articles in the trash.\nWould you like to empty the trash before quitting?";
+/* Class = "NSButtonCell"; title = "Don't Empty Trash"; ObjectID = "18"; */
+"18.title" = "Don't Empty Trash";
 
+/* Class = "NSTextFieldCell"; title = "There are deleted articles in the trash.\nWould you like to empty the trash before quitting?"; ObjectID = "19"; */
+"19.title" = "There are deleted articles in the trash. Would you like to empty the trash before quitting?";
+
+/* Class = "NSButtonCell"; title = "Do not show this warning again"; ObjectID = "20"; */
+"20.title" = "Do not show this warning again";
