--- a/Interfaces/nl.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/nl.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Toon deze waarschuwing niet opnieuw";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Annuleer";
+/* Class = "NSWindow"; title = "Empty Trash"; ObjectID = "5"; */
+"5.title" = "Empty Trash";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Leeg prullenmand";
+/* Class = "NSButtonCell"; title = "Leeg prullenmand"; ObjectID = "17"; */
+"17.title" = "Leeg prullenmand";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Er zijn gewiste artikelen in de prullenmand.\nWil u de prullenmand nu leeg maken?";
+/* Class = "NSButtonCell"; title = "Annuleer"; ObjectID = "18"; */
+"18.title" = "Annuleer";
 
+/* Class = "NSTextFieldCell"; title = "Er zijn gewiste artikelen in de prullenmand.\nWil u de prullenmand nu leeg maken?"; ObjectID = "19"; */
+"19.title" = "Er zijn gewiste artikelen in de prullenmand. Wilt u de prullenmand nu leeg maken?";
+
+/* Class = "NSButtonCell"; title = "Toon deze waarschuwing niet opnieuw"; ObjectID = "20"; */
+"20.title" = "Toon deze waarschuwing niet opnieuw";
