--- a/Interfaces/pt-BR.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/pt-BR.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Não mostrar este aviso novamente";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Não Esvaziar Lixeira";
+/* Class = "NSWindow"; title = "Esvaziar Lixeira"; ObjectID = "5"; */
+"5.title" = "Esvaziar Lixeira";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Esvaziar Lixeira";
+/* Class = "NSButtonCell"; title = "Esvaziar Lixeira"; ObjectID = "17"; */
+"17.title" = "Esvaziar Lixeira";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "Existem artigos apagados na lixeira.\nVocê deseja esvaziar a lixeira antes de encerrar?";
+/* Class = "NSButtonCell"; title = "Não Esvaziar Lixeira"; ObjectID = "18"; */
+"18.title" = "Não Esvaziar Lixeira";
 
+/* Class = "NSTextFieldCell"; title = "Existem artigos apagados na lixeira.\nVocê deseja esvaziar a lixeira antes de encerrar?"; ObjectID = "19"; */
+"19.title" = "Existem artigos apagados na lixeira. Você deseja esvaziar a lixeira antes de encerrar?";
+
+/* Class = "NSButtonCell"; title = "Não mostrar este aviso novamente"; ObjectID = "20"; */
+"20.title" = "Não mostrar este aviso novamente";
