--- a/Interfaces/ru.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/ru.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Больше не показывать это сообщение";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Не очищать";
+/* Class = "NSWindow"; title = "Очистка Корзины"; ObjectID = "5"; */
+"5.title" = "Очистка Корзины";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Очистка Корзины";
+/* Class = "NSButtonCell"; title = "Очистить Корзину"; ObjectID = "17"; */
+"17.title" = "Очистить Корзину";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
+/* Class = "NSButtonCell"; title = "Не очищать"; ObjectID = "18"; */
+"18.title" = "Не очищать";
 
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "В Корзине есть удаленные статьи.\nОчистить Корзину перед завершением работы?";
+/* Class = "NSTextFieldCell"; title = "В Корзине есть удаленные статьи.\nОчистить Корзину перед завершением работы?"; ObjectID = "19"; */
+"19.title" = "В Корзине есть удаленные статьи. Очистить Корзину перед завершением работы?";
+
+/* Class = "NSButtonCell"; title = "Больше не показывать это сообщение"; ObjectID = "20"; */
+"20.title" = "Больше не показывать это сообщение";
