--- a/Interfaces/uk.lproj/EmptyTrashWarning.strings
+++ b/Interfaces/uk.lproj/EmptyTrashWarning.strings
@@ -1,13 +1,15 @@
-/* NSButton (Do not show this warning again) : <title:Do not show this warning again> (oid:10) */
-"Do not show this warning again" = "Більше не показувати це попередження";
 
-/* NSButton (Don't Empty Trash) : <title:Don't Empty Trash> (oid:8) */
-"Don't Empty Trash" = "Не спорожняти смітник";
+/* Class = "NSWindow"; title = "Спорожнити смітник"; ObjectID = "5"; */
+"5.title" = "Спорожнити смітник";
 
-/* NSButton (Empty Trash) : <title:Empty Trash> (oid:7) */
-"Empty Trash" = "Спорожнити смітник";
+/* Class = "NSButtonCell"; title = "Спорожнити смітник"; ObjectID = "17"; */
+"17.title" = "Спорожнити смітник";
 
-/* NSTextField (There are deleted articles in the trash. Would you like to empty the trash before quitting?) : <title:There are deleted articles in the trash.
-Would you like to empty the trash before quitting?> (oid:9) */
-"There are deleted articles in the trash.\nWould you like to empty the trash before quitting?" = "У смітнику є видалені статті.\nЧи не хотіли б ви спорожнити смітник перед тим, як завершити програму?";
+/* Class = "NSButtonCell"; title = "Не спорожняти смітник"; ObjectID = "18"; */
+"18.title" = "Не спорожняти смітник";
 
+/* Class = "NSTextFieldCell"; title = "У смітнику є видалені статті.\nЧи не хотіли б ви спорожнити смітник перед тим, як завершити програму?"; ObjectID = "19"; */
+"19.title" = "У смітнику є видалені статті. Чи не хотіли б ви спорожнити смітник перед тим, як завершити програму?";
+
+/* Class = "NSButtonCell"; title = "Більше не показувати це попередження"; ObjectID = "20"; */
+"20.title" = "Більше не показувати це попередження";
