--- a/Interfaces/de.lproj/GroupFolder.strings
+++ b/Interfaces/de.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Abbrechen";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Geben Sie den Namen des Gruppenordners ein:\n";
+/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
+"5.title" = "Panel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Neuer Gruppenordner";
+/* Class = "NSTextFieldCell"; title = "Neuer Gruppenordner"; ObjectID = "32"; */
+"32.title" = "Neuer Gruppenordner";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "Erstellen"; ObjectID = "34"; */
+"34.title" = "Erstellen";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Speichern";
+/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "35"; */
+"35.title" = "Abbrechen";
 
+/* Class = "NSTextFieldCell"; title = "Geben Sie den Namen des Gruppenordners ein:\n"; ObjectID = "36"; */
+"36.title" = "Geben Sie den Namen des Gruppenordners ein:";
