--- a/Interfaces/ja.lproj/GroupFolder.strings
+++ b/Interfaces/ja.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "キャンセル";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "グループフォルダ名を入力：\n";
+/* Class = "NSWindow"; title = "パネル"; ObjectID = "5"; */
+"5.title" = "パネル";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "新規グループフォルダ";
+/* Class = "NSTextFieldCell"; title = "新規グループフォルダ"; ObjectID = "32"; */
+"32.title" = "新規グループフォルダ";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "パネル";
+/* Class = "NSButtonCell"; title = "保存"; ObjectID = "34"; */
+"34.title" = "保存";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "保存";
+/* Class = "NSButtonCell"; title = "キャンセル"; ObjectID = "35"; */
+"35.title" = "キャンセル";
 
+/* Class = "NSTextFieldCell"; title = "グループフォルダ名を入力：\n"; ObjectID = "36"; */
+"36.title" = "グループフォルダ名を入力：";
