--- a/Interfaces/nl.lproj/GroupFolder.strings
+++ b/Interfaces/nl.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Annuleer";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Geef de naam van de groep-map:\n";
+/* Class = "NSWindow"; title = "Paneel"; ObjectID = "5"; */
+"5.title" = "Paneel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Nieuwe groep-map";
+/* Class = "NSTextFieldCell"; title = "Nieuwe groep-map"; ObjectID = "32"; */
+"32.title" = "Nieuwe groep-map";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "Bewaar"; ObjectID = "34"; */
+"34.title" = "Bewaar";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Bewaar";
+/* Class = "NSButtonCell"; title = "Annuleer"; ObjectID = "35"; */
+"35.title" = "Annuleer";
 
+/* Class = "NSTextFieldCell"; title = "Geef de naam van de groep-map:\n"; ObjectID = "36"; */
+"36.title" = "Geef de naam van de groep-map:";
