--- a/Interfaces/es.lproj/GroupFolder.strings
+++ b/Interfaces/es.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Cancelar";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Introduzca el nombre de la carpeta de grupo:\n";
+/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
+"5.title" = "Panel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Nueva carpeta de grupo";
+/* Class = "NSTextFieldCell"; title = "Nueva carpeta de grupo"; ObjectID = "32"; */
+"32.title" = "Nueva carpeta de grupo";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "Guardar"; ObjectID = "34"; */
+"34.title" = "Guardar";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Guardar";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "35"; */
+"35.title" = "Cancelar";
 
+/* Class = "NSTextFieldCell"; title = "Introduzca el nombre de la carpeta de grupo:\n"; ObjectID = "36"; */
+"36.title" = "Introduzca el nombre de la carpeta de grupo:";
