--- a/Interfaces/it.lproj/GroupFolder.strings
+++ b/Interfaces/it.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Annulla";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Inserisci il nome della cartella gruppo:\n";
+/* Class = "NSWindow"; title = "Pannello"; ObjectID = "5"; */
+"5.title" = "Pannello";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Nuova Cartella Gruppo";
+/* Class = "NSTextFieldCell"; title = "Nuova Cartella Gruppo"; ObjectID = "32"; */
+"32.title" = "Nuova Cartella Gruppo";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Pannello";
+/* Class = "NSButtonCell"; title = "Registra"; ObjectID = "34"; */
+"34.title" = "Registra";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Registra";
+/* Class = "NSButtonCell"; title = "Annulla"; ObjectID = "35"; */
+"35.title" = "Annulla";
 
+/* Class = "NSTextFieldCell"; title = "Inserisci il nome della cartella gruppo:\n"; ObjectID = "36"; */
+"36.title" = "Inserisci il nome della cartella gruppo:";
