--- a/Interfaces/ko.lproj/GroupFolder.strings
+++ b/Interfaces/ko.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "취소";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "새 그룹 폴더의 이름을 입력하십시오:";
+/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
+"5.title" = "Panel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "새 그룹 폴더 추가";
+/* Class = "NSTextFieldCell"; title = "새 그룹 폴더 추가"; ObjectID = "32"; */
+"32.title" = "새 그룹 폴더 추가";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "추가"; ObjectID = "34"; */
+"34.title" = "추가";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "추가";
+/* Class = "NSButtonCell"; title = "취소"; ObjectID = "35"; */
+"35.title" = "취소";
 
+/* Class = "NSTextFieldCell"; title = "새 그룹 폴더의 이름을 입력하십시오:"; ObjectID = "36"; */
+"36.title" = "새 그룹 폴더의 이름을 입력하십시오:";
