--- a/Interfaces/sv.lproj/GroupFolder.strings
+++ b/Interfaces/sv.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Avbryt";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Ange namn på gruppmappen:\n";
+/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
+"5.title" = "Panel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Ny gruppmapp";
+/* Class = "NSTextFieldCell"; title = "Ny gruppmapp"; ObjectID = "32"; */
+"32.title" = "Ny gruppmapp";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "Spara"; ObjectID = "34"; */
+"34.title" = "Spara";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Spara";
+/* Class = "NSButtonCell"; title = "Avbryt"; ObjectID = "35"; */
+"35.title" = "Avbryt";
 
+/* Class = "NSTextFieldCell"; title = "Ange namn på gruppmappen:\n"; ObjectID = "36"; */
+"36.title" = "Ange namn på gruppmappen:";
