--- a/Interfaces/uk.lproj/GroupFolder.strings
+++ b/Interfaces/uk.lproj/GroupFolder.strings
@@ -1,16 +1,15 @@
-/* NSButton (Cancel) : <title:Cancel> (oid:22) */
-"Cancel" = "Скасувати";
 
-/* NSTextField (Enter the group folder name: ) : <title:Enter the group folder name:
-> (oid:23) */
-"Enter the group folder name:\n" = "Введіть ім'я папки:\n";
+/* Class = "NSWindow"; title = "Panel"; ObjectID = "5"; */
+"5.title" = "Panel";
 
-/* NSTextField (New Group Folder) : <title:New Group Folder> (oid:19) */
-"New Group Folder" = "Нова папка";
+/* Class = "NSTextFieldCell"; title = "Нова папка"; ObjectID = "32"; */
+"32.title" = "Нова папка";
 
-/* NSPanel (Panel) : <title:Panel> (oid:5) */
-"Panel" = "Panel";
+/* Class = "NSButtonCell"; title = "Зберегти"; ObjectID = "34"; */
+"34.title" = "Зберегти";
 
-/* NSButton (Save) : <title:Save> (oid:21) */
-"Save" = "Зберегти";
+/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "35"; */
+"35.title" = "Скасувати";
 
+/* Class = "NSTextFieldCell"; title = "Введіть ім'я папки:\n"; ObjectID = "36"; */
+"36.title" = "Введіть ім'я папки:";
