Switch FeedCredentials.xib to Auto Layout

--- a/Interfaces/cs.lproj/FeedCredentials.strings
+++ b/Interfaces/cs.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "Přístup k položce %@ vyžaduje poskytnutí přihlašovacích údajů";
+/* Class = "NSButtonCell"; title = "Zrušit"; ObjectID = "32"; */
+"32.title" = "Zrušit";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Zrušit";
+/* Class = "NSTextFieldCell"; title = "Jméno:"; ObjectID = "33"; */
+"33.title" = "Jméno:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Přihlásit se";
+/* Class = "NSTextFieldCell"; title = "Přístup k položce %@ vyžaduje poskytnutí přihlašovacích údajů"; ObjectID = "34"; */
+"34.title" = "Přístup k položce %@ vyžaduje poskytnutí přihlašovacích údajů";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Jméno:";
+/* Class = "NSTextFieldCell"; title = "Heslo:"; ObjectID = "37"; */
+"37.title" = "Heslo:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Heslo:";
+/* Class = "NSButtonCell"; title = "Přihlásit se"; ObjectID = "38"; */
+"38.title" = "Přihlásit se";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Zadané uživatelské jméno a heslo bude uchováno pro příští obnovení tohoto odebírání.";
-
+/* Class = "NSTextFieldCell"; title = "Zadané uživatelské jméno a heslo bude uchováno pro příští obnovení tohoto odebírání."; ObjectID = "39"; */
+"39.title" = "Zadané uživatelské jméno a heslo bude uchováno pro příští obnovení tohoto odebírání.";
