--- a/Interfaces/de.lproj/FeedCredentials.strings
+++ b/Interfaces/de.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "Der Zugriff auf %@ benötigt Ihre Benutzerdaten";
+/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "32"; */
+"32.title" = "Abbrechen";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Abbrechen";
+/* Class = "NSTextFieldCell"; title = "Benutzername:"; ObjectID = "33"; */
+"33.title" = "Benutzername:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Anmelden";
+/* Class = "NSTextFieldCell"; title = "Der Zugriff auf %@ benötigt Benutzerdaten von Ihnen"; ObjectID = "34"; */
+"34.title" = "Der Zugriff auf %@ benötigt Benutzerdaten von Ihnen";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Benutzername:";
+/* Class = "NSTextFieldCell"; title = "Passwort:"; ObjectID = "37"; */
+"37.title" = "Passwort:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Passwort:";
+/* Class = "NSButtonCell"; title = "Anmelden"; ObjectID = "38"; */
+"38.title" = "Anmelden";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Die Benutzerdaten werden für die nächsten Aktualisierungen des Abonnements gespeichert.";
-
+/* Class = "NSTextFieldCell"; title = "Die Benutzerdaten werden für die nächsten Aktualisierungen des Abonnements gespeichert."; ObjectID = "39"; */
+"39.title" = "Die Benutzerdaten werden für die nächsten Aktualisierungen des Abonnements gespeichert.";
