--- a/Interfaces/sv.lproj/FeedCredentials.strings
+++ b/Interfaces/sv.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "Anslutning till %@ kräver att du anger inloggningsuppgifter";
+/* Class = "NSButtonCell"; title = "Avbryt"; ObjectID = "32"; */
+"32.title" = "Avbryt";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Avbryt";
+/* Class = "NSTextFieldCell"; title = "Namn:"; ObjectID = "33"; */
+"33.title" = "Namn:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Logga in";
+/* Class = "NSTextFieldCell"; title = "Anslutning till %@ kräver att du anger inloggningsuppgifter"; ObjectID = "34"; */
+"34.title" = "Anslutning till %@ kräver att du anger inloggningsuppgifter";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Namn:";
+/* Class = "NSTextFieldCell"; title = "Lösenord:"; ObjectID = "37"; */
+"37.title" = "Lösenord:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Lösenord:";
+/* Class = "NSButtonCell"; title = "Logga in"; ObjectID = "38"; */
+"38.title" = "Logga in";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Användarnamnet och lösenordet du anger kommer att kommas ihåg till nästa gång du uppdaterar den här prenumerationen.";
-
+/* Class = "NSTextFieldCell"; title = "Användarnamnet och lösenordet du anger kommer att kommas ihåg till nästa gång du uppdaterar den här prenumerationen."; ObjectID = "39"; */
+"39.title" = "Användarnamnet och lösenordet du anger kommer att kommas ihåg till nästa gång du uppdaterar den här prenumerationen.";
