--- a/Interfaces/tr.lproj/FeedCredentials.strings
+++ b/Interfaces/tr.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "%@ erişimi giriş kanıtlarını belirtmenizi gerektiriyor";
+/* Class = "NSButtonCell"; title = "İptal"; ObjectID = "32"; */
+"32.title" = "İptal";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "İptal";
+/* Class = "NSTextFieldCell"; title = "Ad:"; ObjectID = "33"; */
+"33.title" = "Ad:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Giriş";
+/* Class = "NSTextFieldCell"; title = "%@ erişimi giriş kanıtlarını belirtmenizi gerektiriyor"; ObjectID = "34"; */
+"34.title" = "%@ erişimi giriş kanıtlarını belirtmenizi gerektiriyor";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Ad:";
+/* Class = "NSTextFieldCell"; title = "Şifre:"; ObjectID = "37"; */
+"37.title" = "Şifre:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Şifre:";
+/* Class = "NSButtonCell"; title = "Giriş"; ObjectID = "38"; */
+"38.title" = "Giriş";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Bu üyelik için girmiş olduğunuz kullanıcı adı ve şifre, aboneliği bir sonraki kez yenilediğinizde hatırlanacak.";
-
+/* Class = "NSTextFieldCell"; title = "Bu üyelik için girmiş olduğunuz kullanıcı adı ve şifre, aboneliği bir sonraki kez yenilediğinizde hatırlanacak."; ObjectID = "39"; */
+"39.title" = "Bu üyelik için girmiş olduğunuz kullanıcı adı ve şifre, aboneliği bir sonraki kez yenilediğinizde hatırlanacak.";
