--- a/Interfaces/es.lproj/FeedCredentials.strings
+++ b/Interfaces/es.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión..";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "32"; */
+"32.title" = "Cancelar";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Cancelar";
+/* Class = "NSTextFieldCell"; title = "Nombre:"; ObjectID = "33"; */
+"33.title" = "Nombre:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Iniciar sesión";
+/* Class = "NSTextFieldCell"; title = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión."; ObjectID = "34"; */
+"34.title" = "El acceso a %@ requiere que proporcione las credenciales de inicio de sesión.";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Nombre:";
+/* Class = "NSTextFieldCell"; title = "Contraseña:"; ObjectID = "37"; */
+"37.title" = "Contraseña:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Contraseña:";
+/* Class = "NSButtonCell"; title = "Iniciar sesión"; ObjectID = "38"; */
+"38.title" = "Iniciar sesión";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "El nombre de usuario y la contraseña serán recordados para la próxima vez que actualice esta suscripción.";
-
+/* Class = "NSTextFieldCell"; title = "El nombre de usuario y la contraseña serán recordados para la próxima vez que actualice esta suscripción."; ObjectID = "39"; */
+"39.title" = "El nombre de usuario y la contraseña serán recordados para la próxima vez que actualice esta suscripción.";
