--- a/Interfaces/eu.lproj/FeedCredentials.strings
+++ b/Interfaces/eu.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "%@-ra sartzeko beharrezkoa da izena ematea";
+/* Class = "NSButtonCell"; title = "Ezeztatu"; ObjectID = "32"; */
+"32.title" = "Ezeztatu";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Ezeztatu";
+/* Class = "NSTextFieldCell"; title = "Izena:"; ObjectID = "33"; */
+"33.title" = "Izena:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Izena Eman";
+/* Class = "NSTextFieldCell"; title = "%@-ra sartzeko beharrezkoa da izena ematea"; ObjectID = "34"; */
+"34.title" = "%@-ra sartzeko beharrezkoa da izena ematea";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Izena:";
+/* Class = "NSTextFieldCell"; title = "Pasahitza:"; ObjectID = "37"; */
+"37.title" = "Pasahitza:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Pasahitza:";
+/* Class = "NSButtonCell"; title = "Izena Eman"; ObjectID = "38"; */
+"38.title" = "Izena Eman";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Emandako erabiltzaile izena eta pasahitza gorde egingo dira harpidetza eguneratzean erabiltzeko.";
-
+/* Class = "NSTextFieldCell"; title = "Emandako erabiltzaile izena eta pasahitza gorde egingo dira harpidetza eguneratzean erabiltzeko."; ObjectID = "39"; */
+"39.title" = "Emandako erabiltzaile izena eta pasahitza gorde egingo dira harpidetza eguneratzean erabiltzeko.";
