--- a/Interfaces/fr.lproj/FeedCredentials.strings
+++ b/Interfaces/fr.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "L'accès à %@ nécessite de vous identifier";
+/* Class = "NSButtonCell"; title = "Annuler"; ObjectID = "32"; */
+"32.title" = "Annuler";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Annuler";
+/* Class = "NSTextFieldCell"; title = "Nom :"; ObjectID = "33"; */
+"33.title" = "Nom :";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "S'identifier";
+/* Class = "NSTextFieldCell"; title = "L'accès à %@ nécessite de vous identifier"; ObjectID = "34"; */
+"34.title" = "L'accès à %@ nécessite de vous identifier";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Nom :";
+/* Class = "NSTextFieldCell"; title = "Mot de passe :"; ObjectID = "37"; */
+"37.title" = "Mot de passe :";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Mot de passe :";
+/* Class = "NSButtonCell"; title = "S'identifier"; ObjectID = "38"; */
+"38.title" = "S'identifier";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour le prochain accès à ce flux.";
-
+/* Class = "NSTextFieldCell"; title = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour le prochain accès à ce flux."; ObjectID = "39"; */
+"39.title" = "Le nom d'utilisateur et le mot de passe fournis seront conservés pour le prochain accès à ce flux.";
