--- a/Interfaces/it.lproj/FeedCredentials.strings
+++ b/Interfaces/it.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "L'accesso a %@ richiede l'inserimento delle tue credenziali di login";
+/* Class = "NSButtonCell"; title = "Annulla"; ObjectID = "32"; */
+"32.title" = "Annulla";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Annulla";
+/* Class = "NSTextFieldCell"; title = "Nome:"; ObjectID = "33"; */
+"33.title" = "Nome:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Login";
+/* Class = "NSTextFieldCell"; title = "L'accesso a %@ richiede l'inserimento delle tue credenziali di login"; ObjectID = "34"; */
+"34.title" = "L'accesso a %@ richiede l'inserimento delle tue credenziali di login";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Nome:";
+/* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
+"37.title" = "Password:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Password:";
+/* Class = "NSButtonCell"; title = "Login"; ObjectID = "38"; */
+"38.title" = "Login";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione.";
-
+/* Class = "NSTextFieldCell"; title = "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione."; ObjectID = "39"; */
+"39.title" = "Nome utente e password da te forniti saranno ricordati la prossima volta che aggiornerai questa iscrizione.";
