--- a/Interfaces/ja.lproj/FeedCredentials.strings
+++ b/Interfaces/ja.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "%@ へのアクセスにはログイン証明が必要です";
+/* Class = "NSButtonCell"; title = "キャンセル"; ObjectID = "32"; */
+"32.title" = "キャンセル";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "キャンセル";
+/* Class = "NSTextFieldCell"; title = "名前："; ObjectID = "33"; */
+"33.title" = "名前：";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "ログイン";
+/* Class = "NSTextFieldCell"; title = "%@ へのアクセスにはログイン証明が必要です"; ObjectID = "34"; */
+"34.title" = "%@ へのアクセスにはログイン証明が必要です";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "名前：";
+/* Class = "NSTextFieldCell"; title = "パスワード："; ObjectID = "37"; */
+"37.title" = "パスワード：";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "パスワード：";
+/* Class = "NSButtonCell"; title = "ログイン"; ObjectID = "38"; */
+"38.title" = "ログイン";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "この購読を更新するためにユーザ名とパスワードを記憶します。";
-
+/* Class = "NSTextFieldCell"; title = "この購読を更新するためにユーザ名とパスワードを記憶します。"; ObjectID = "39"; */
+"39.title" = "この購読を更新するためにユーザ名とパスワードを記憶します。";
