--- a/Interfaces/nl.lproj/FeedCredentials.strings
+++ b/Interfaces/nl.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "U dient een gebruikersnaam en wachtwoord op te geven om toegang te krijgen tot %@.";
+/* Class = "NSButtonCell"; title = "Annuleer"; ObjectID = "32"; */
+"32.title" = "Annuleer";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Annuleer";
+/* Class = "NSTextFieldCell"; title = "Gebruikersnaam:"; ObjectID = "33"; */
+"33.title" = "Gebruikersnaam:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Log in";
+/* Class = "NSTextFieldCell"; title = "U dient een gebruikersnaam en wachtwoord op te geven om toegang te krijgen tot %@."; ObjectID = "34"; */
+"34.title" = "U dient een gebruikersnaam en wachtwoord op te geven om toegang te krijgen tot %@.";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Gebruikersnaam:";
+/* Class = "NSTextFieldCell"; title = "Wachtwoord:"; ObjectID = "37"; */
+"37.title" = "Wachtwoord:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Wachtwoord:";
+/* Class = "NSButtonCell"; title = "Log in"; ObjectID = "38"; */
+"38.title" = "Log in";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat u deze niet nog eens hoeft op te geven.";
-
+/* Class = "NSTextFieldCell"; title = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat u deze niet nog eens hoeft op te geven."; ObjectID = "39"; */
+"39.title" = "De opgegeven gebruikersnaam en wachtwoord zullen worden opgeslagen, zodat u deze niet nog eens hoeft op te geven.";
