--- a/Interfaces/pt-BR.lproj/FeedCredentials.strings
+++ b/Interfaces/pt-BR.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "Acessar %@ requer que você entre suas credenciais";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "32"; */
+"32.title" = "Cancelar";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Cancelar";
+/* Class = "NSTextFieldCell"; title = "Nome:"; ObjectID = "33"; */
+"33.title" = "Nome:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Entrar";
+/* Class = "NSTextFieldCell"; title = "Acessar %@ requer que você entre suas credenciais"; ObjectID = "34"; */
+"34.title" = "Acessar %@ requer que você entre suas credenciais";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Nome:";
+/* Class = "NSTextFieldCell"; title = "Senha:"; ObjectID = "37"; */
+"37.title" = "Senha:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Senha:";
+/* Class = "NSButtonCell"; title = "Entrar"; ObjectID = "38"; */
+"38.title" = "Entrar";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "O nome de usuário e senha fornecidos serão lembrados da próxima vez que você atualizar esta assinatura.";
-
+/* Class = "NSTextFieldCell"; title = "O nome de usuário e senha fornecidos serão lembrados da próxima vez que você atualizar esta assinatura."; ObjectID = "39"; */
+"39.title" = "O nome de usuário e senha fornecidos serão lembrados da próxima vez que você atualizar esta assinatura.";
