--- a/Interfaces/pt.lproj/FeedCredentials.strings
+++ b/Interfaces/pt.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "O acesso a %@ necessita que disponibilize as suas credenciais";
+/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "32"; */
+"32.title" = "Cancelar";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Cancelar";
+/* Class = "NSTextFieldCell"; title = "Nome:"; ObjectID = "33"; */
+"33.title" = "Nome:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Log In";
+/* Class = "NSTextFieldCell"; title = "O acesso a %@ necessita que disponibilize as suas credenciais"; ObjectID = "34"; */
+"34.title" = "O acesso a %@ necessita que disponibilize as suas credenciais";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Nome:";
+/* Class = "NSTextFieldCell"; title = "Palavra-Passe:"; ObjectID = "37"; */
+"37.title" = "Palavra-Passe:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Palavra-Passe:";
+/* Class = "NSButtonCell"; title = "Log In"; ObjectID = "38"; */
+"38.title" = "Log In";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "O nome de utilizador e palvra-passe que forneceu serão guardados para a próxima vez que actualizar esta subscrição.";
-
+/* Class = "NSTextFieldCell"; title = "O nome de utilizador e palvra-passe que forneceu serão guardados para a próxima vez que actualizar esta subscrição."; ObjectID = "39"; */
+"39.title" = "O nome de utilizador e palvra-passe que forneceu serão guardados para a próxima vez que actualizar esta subscrição.";
