--- a/Interfaces/ru.lproj/FeedCredentials.strings
+++ b/Interfaces/ru.lproj/FeedCredentials.strings
@@ -1,20 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "Для доступа к %@ требуется указать имя пользователя и пароль";
+/* Class = "NSButtonCell"; title = "Отмена"; ObjectID = "32"; */
+"32.title" = "Отмена";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Отмена";
+/* Class = "NSTextFieldCell"; title = "Имя:"; ObjectID = "33"; */
+"33.title" = "Имя:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Войти";
+/* Class = "NSTextFieldCell"; title = "Для доступа к %@ требуется указать имя пользователя и пароль"; ObjectID = "34"; */
+"34.title" = "Для доступа к %@ требуется указать имя пользователя и пароль";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Имя:";
+/* Class = "NSTextFieldCell"; title = "Пароль:"; ObjectID = "37"; */
+"37.title" = "Пароль:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Пароль:";
+/* Class = "NSButtonCell"; title = "Войти"; ObjectID = "38"; */
+"38.title" = "Войти";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно";
+/* Class = "NSTextFieldCell"; title = "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно"; ObjectID = "39"; */
+"39.title" = "Имя пользователя и пароль будут сохранены, так что вам не придется вводить их повторно";
