--- a/Interfaces/uk.lproj/FeedCredentials.strings
+++ b/Interfaces/uk.lproj/FeedCredentials.strings
@@ -1,21 +1,18 @@
-/* NSPanel () : <title:> (oid:5) */
-"" = "";
 
-/* NSTextField (Access to %@ requires you to provide log in credentials) : <title:Access to %@ requires you to provide log in credentials> (oid:10) */
-"Access to %@ requires you to provide log in credentials" = "Правили доступу до %@ вимагають введення імені користувача та паролю";
+/* Class = "NSButtonCell"; title = "Скасувати"; ObjectID = "32"; */
+"32.title" = "Скасувати";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:8) */
-"Cancel" = "Скасувати";
+/* Class = "NSTextFieldCell"; title = "Ім'я:"; ObjectID = "33"; */
+"33.title" = "Ім'я:";
 
-/* NSButton (Log In) : <title:Log In> (oid:14) */
-"Log In" = "Увійти";
+/* Class = "NSTextFieldCell"; title = "Правили доступу до %@ вимагають введення імені користувача та паролю"; ObjectID = "34"; */
+"34.title" = "Правили доступу до %@ вимагають введення імені користувача та паролю";
 
-/* NSTextField (Name:) : <title:Name:> (oid:9) */
-"Name:" = "Ім'я:";
+/* Class = "NSTextFieldCell"; title = "Пароль:"; ObjectID = "37"; */
+"37.title" = "Пароль:";
 
-/* NSTextField (Password:) : <title:Password:> (oid:13) */
-"Password:" = "Пароль:";
+/* Class = "NSButtonCell"; title = "Увійти"; ObjectID = "38"; */
+"38.title" = "Увійти";
 
-/* NSTextField (The user name and password you provide will be remembered for the next time you refresh this subscription.) : <title:The user name and password you provide will be remembered for the next time you refresh this subscription.> (oid:15) */
-"The user name and password you provide will be remembered for the next time you refresh this subscription." = "Ім'я користувача та пароль будуть збережені, отож вам не доведеться вводити їх знову.";
-
+/* Class = "NSTextFieldCell"; title = "Ім'я користувача та пароль будуть збережені, отож вам не доведеться вводити їх знову."; ObjectID = "39"; */
+"39.title" = "Ім'я користувача та пароль будуть збережені, отож вам не доведеться вводити їх знову.";
